<resources>
    <string name="app_name">AppScreenTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_icon_desc">App Icon</string>
    <string name="requires_permission">This app requires the App Usage Access permission to work. Once you\'ve granted the permission, tap on Proceed to start using the app.</string>
    <string name="proceed">Proceed</string>
    <string name="settings">Settings</string>
    <string name="applications">UYGULAMALAR</string>
    <string name="get_all_past_usage_stats_and_more">Get all past usage stats and more</string>
    <string name="become_a_premium">Become A Premium</string>
    <string name="something_seems_to_have_gone_wrong">Something seems to have gone wrong.</string>
    <string name="no_any_data">No Any Data</string>
    <string name="no_data">No Data</string>
    <string name="_18">18</string>
    <string name="dec">DEC</string>
    <string name="sun">SUN</string>
    <string name="kullanim_istatistikleri">Kullanım İstatistikleri</string>
    <string name="go_premium">GO PREMIUM</string>
    <string name="decrease_or_increase_image">Decrease or increase image</string>
    <string name="others">Diğerleri</string>
</resources>