<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/requires_permission"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/settings"
            android:textSize="12sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="end"
            app:iconSize="16dp" />

        <Button
            android:id="@+id/buttonProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/proceed"
            android:textSize="12sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_forward"
            app:iconGravity="end"
            app:iconSize="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>