<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dateItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/imageViewPremium"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-16dp"
        android:background="@drawable/ic_icon_premium_notification"
        android:scaleType="fitCenter"
        android:translationZ="900dp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayoutHorizontal"
        app:layout_constraintTop_toTopOf="@+id/constraintLayoutHorizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewMonth"
            android:layout_width="70dp"
            android:layout_height="17dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/dec"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDayNum"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewDayNum"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sun"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/_18"
            android:textColor="@color/day_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewMonth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDayNum" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

